# popup_dictionary

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  jujum_plugin.rs
src/: app.rs  dictionary.rs  font_helper.rs  lib.rs  main.rs  manga_ocr.rs  parser.rs  plugin.rs  tesseract.rs  tokenizer.rs  tray.rs  window_helper.rs
src/plugins/: jotoba_plugin.rs  mod.rs
src/plugins/jotoba_plugin/: jotoba_plugin.rs  jotoba_tokenizer.rs  mod.rs
src/plugins/jujum_plugin/: jmdict_dictionary.rs  jujum_plugin.rs  jumandic_tokenizer.rs  mod.rs
src/plugins/kihon_plugin/: dependencies.rs  jmdict_dictionary.rs  jumandic_tokenizer.rs  kihon_plugin.rs  mod.rs
