[package]
name = "popup_dictionary"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
curl = "0.4.49"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
vibrato = "0.5.2"
sled = "0.34.7"
bincode = "2.0.1"
dirs = "6.0.0"
phf = { version = "0.13.1", features = ["macros"] }
aho-corasick = "1.1.4"
enigo = { version = "0.6.1", features = ["wayland"] }
hyprland = { version = "0.4.0-beta.3", optional = true }

[target."cfg(target_os = \"linux\")"]
hyprland = "0.4.0-beta.3"

[features]
default = []
hyprland-support = ["dep:hyprland"]
