[package]
name = "popup_dictionary"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
eframe = "0.33.0"
egui = "0.33.0"
curl = "0.4.49"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
vibrato = "0.5.2"
sled = "0.34.7"
bincode = "2.0.1"
dirs = "6.0.0"
phf = { version = "0.13.1", features = ["macros"] }
aho-corasick = "1.1.4"
clap = { version = "4.5.53", features = ["derive"] }
enigo = "0.6.1"
hyprland = { version = "0.4.0-beta.3", optional = true }
arboard = "3.6.1"
x11rb = "0.13.2"
tesseract-rs = "0.1.20"
image = "0.25.9"

[features]
default = []
wayland-support = ["enigo/wayland", "arboard/wayland-data-control"]
hyprland-support = ["dep:hyprland", "wayland-support"]
