[package]
name = "popup_dictionary"
version = "0.2.1"
edition = "2024"
description = "Japanese popup dictionary as a native window"
readme = "README.md"
repository = "https://github.com/jasmine-blush/popup_dictionary"
license = "GNU General Public License v3.0"

[dependencies]
# logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
# ui
eframe = "0.33.0"
egui = "0.33.0"
# kihon/jotoba
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
phf = { version = "0.13.1", features = ["macros"] }
# jotoba
curl = "0.4.49"
aho-corasick = "1.1.4"
# kihon
vibrato = "0.5.2"
sled = "0.34.7"
bincode = "2.0.1"
# kihon dataset downloading
reqwest = { version = "0.13.1", features = ["blocking"] }
xz2 = { version = "0.1.7", features = ["static"] }
tar = "0.4.44"
zstd = "0.13.3"
flate2 = "1.1.9"
# manga-ocr
ort = "2.0.0-rc.12"
ndarray = "0.17.2"
# util
dirs = "6.0.0"                                           # platform agnostic default dirs
clap = { version = "4.5.53", features = ["derive"] }     # cli
enigo = "0.6.1"                                          # cursor pos and display size for windowing 
hyprland = { version = "0.4.0-beta.3", optional = true } # hyprland interaction for windowing
arboard = "3.6.1"                                        # clipboard
x11rb = "0.13.2"                                         # x11 connection for windowing
image = "0.25.9"                                         # ocr, tray icon
tokio = "1.49.0"                                         # tray icon background thread
regex = "1.12.2"                                         # input text japanese check
font-kit = "0.14.3"                                      # check system fonts

[target.'cfg(unix)'.dependencies]
# tray icon
ksni = "0.3.3"

[target.'cfg(windows)'.dependencies]
# tray icon
tray-icon = "0.21.3"
windows-sys = { version = "0.61.2", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Console",
] }

[features]
default = []
wayland-support = ["enigo/wayland", "arboard/wayland-data-control"]
hyprland-support = ["dep:hyprland", "wayland-support"]
flake-build = ["ort/load-dynamic"]
